# ROS_Practice

./: talker.cpp
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/src/: example.cpp  memo.txt
my_pcl_tutorial/src/samples/: readme.html
my_pcl_tutorial/src/samples/docs/: sample1.html  sample2.html  sample3.html  sample4.html  style.css
my_pcl_tutorial/src/samples/sample1/: CMakeLists.txt
my_pcl_tutorial/src/samples/sample1/src/: sample1.cpp
my_pcl_tutorial/src/samples/sample2/: CMakeLists.txt
my_pcl_tutorial/src/samples/sample2/data/: loadSample.pcd
my_pcl_tutorial/src/samples/sample2/src/: sample2.cpp
my_pcl_tutorial/src/samples/sample3/: CMakeLists.txt
my_pcl_tutorial/src/samples/sample3/src/: sample3.cpp
my_pcl_tutorial/src/samples/sample4/: CMakeLists.txt
my_pcl_tutorial/src/samples/sample4/data/: output.pcd  templateA.pcd  templateB.pcd
my_pcl_tutorial/src/samples/sample4/src/: sample4.cpp
pointcloud2_transform_pcl/: CMakeLists.txt  package.xml
pointcloud2_transform_pcl/src/: pointcloud2_transform_pcl.cpp
ypspur_run_test/: CMakeLists.txt  package.xml
ypspur_run_test/src/: aa.cpp  pointcloud2_transform_pcl.cpp  temp.cpp  urg_transform_pointcloud2.cpp
ypspur_run_test/src/不使用/: memo.txt  sensor_tf_test.cpp  ypspur_run_test_backup.cpp  ypspur_run_test_backup2.cpp
